[gd_scene load_steps=2 format=3 uid="uid://b34i0hoimst3x"]

[ext_resource type="Script" path="res://test/B.gd" id="1"]

[node name="B" type="Node2D"]
script = ExtResource("1")

[node name="b" type="Node2D" parent="."]

[node name="bb" type="Node2D" parent="b"]

[connection signal="ready" from="." to="." method="_on_B_ready"]
[connection signal="tree_entered" from="." to="." method="_on_B_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_B_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_B_tree_exiting"]
